gradle changes one

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,30 +26,40 @@ android {
     productFlavors {
         develop {
             applicationId "com.kotlintest"
-//            versionCode 1
-//            versionName "0.1.0"
+            versionCode 1
+            versionName "0.1.0"
             // Fetch the version according to git latest tag and "how far are we from last tag"
             def longVersionName = "git -C ${rootDir} describe --tags --long".execute().text.trim()
-            printf("longVersionName - " + longVersionName + "\n")
-            def (fullVersionTag, versionBuild, gitSha) = longVersionName.tokenize('-')
-            printf("fullVersionTag - " + fullVersionTag + "\n")
-            printf("versionBuild - " + versionBuild + "\n")
-            printf("gitSha - " + gitSha + "\n")
-            def (versionMajor, versionMinor, versionPatch) = fullVersionTag.tokenize('.')
-            printf("versionMajor - " + versionMajor + "\n")
-            printf("versionMinor - " + versionMinor + "\n")
-            printf("versionPatch - " + versionPatch + "\n")
-            def (versionMajorNum) = versionMajor.tokenize('v')
-            printf("versionMajorNum - " + versionMajorNum + "\n")
+            // Fetch count of tags
+            def countOfTags = ['sh', '-c', 'git tag | wc -l'].execute().text.trim()
+            printf("countOfTags - " + countOfTags + "\n")
+            if (countOfTags.toInteger() != 0) {
+                printf("longVersionName - " + longVersionName + "\n")
+                def (fullVersionTag, versionBuild, gitSha) = longVersionName.tokenize('-')
+                printf("fullVersionTag - " + fullVersionTag + "\n")
+                printf("versionBuild - " + versionBuild + "\n")
+                printf("gitSha - " + gitSha + "\n")
+                def (versionMajor, versionMinor, versionPatch, versionServer) = fullVersionTag.tokenize('.')
+                printf("versionMajor - " + versionMajor + "\n")
+                printf("versionMinor - " + versionMinor + "\n")
+                printf("versionPatch - " + versionPatch + "\n")
+                printf("versionServer - " + versionServer + "\n")
+                def (versionMajorNum) = versionMajor.tokenize('v')
+                printf("versionMajorNum - " + versionMajorNum + "\n")
 
-            def countOfCommits = versionBuild
-            if (versionMinor != null && countOfCommits < versionMinor) {
-                versionMinor = versionMinor.toInteger() + 1
+//            def countOfCommits = versionBuild
+//            if (versionMinor != null && countOfCommits < versionMinor) {
+//                versionMinor = versionMinor.toInteger() + 1
+//            }
+                versionPatch = countOfCommits
+                versionCode versionMajorNum.toInteger() + 1
+                //versionName "$versionMajorNum.$versionMinor.$versionPatch.$versionBuild"
+                if (versionServer == null) {
+                    versionName "$versionMajorNum.$versionMinor.$versionPatch"
+                } else {
+                    versionName "$versionMajorNum.$versionMinor.$versionPatch.$versionBuild"
+                }
             }
-            versionPatch = countOfCommits
-            versionCode 1
-            //versionName "$versionMajorNum.$versionMinor.$versionPatch.$versionBuild"
-            versionName "$versionMajorNum.$versionMinor.$versionPatch"
 
             // Friendly print the version output to the Gradle console
             printf("\n--------" + "VERSION DATA--------" + "\n" + "- CODE: " + versionCode + "\n" +
