--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,17 +50,17 @@ android {
             def countOfCommits = versionBuild
 //            if (versionMinor != null && countOfCommits < versionMinor) {
 //                versionMinor = versionMinor.toInteger() + 1
-//            } 
+//            }
                 versionPatch = countOfCommits
                 versionCode versionMajorNum.toInteger() + 1
                 //versionName "$versionMajorNum.$versionMinor.$versionPatch.$versionBuild"
                 if (versionServer == null) {
                     versionName "$versionMajorNum.$versionMinor.$versionPatch"
                 } else {
-                    versionName "$versionMajorNum.$versionMinor.$versionPatch.$versionBuild"
+                    versionName "$versionMajorNum.$versionMinor.$versionPatch.$versionServer"
                 }
             }
-
+ 
             // Friendly print the version output to the Gradle console
             printf("\n--------" + "VERSION DATA--------" + "\n" + "- CODE: " + versionCode + "\n" +
                     "- NAME: " + versionName + "\n----------------------------\n")
