--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,15 +7,14 @@ repositories {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         applicationId "com.kotlintest"
-        minSdkVersion 19
-        targetSdkVersion 25
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -61,7 +60,7 @@ android {
                     versionName "$versionMajorNum.$versionMinor.$versionPatch.$versionServer"
                 }
             }
-  
+
             // Friendly print the version output to the Gradle console
             printf("\n--------" + "VERSION DATA--------" + "\n" + "- CODE: " + versionCode + "\n" +
                     "- NAME: " + versionName + "\n----------------------------\n")
